[package]
name = "mnotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { version = "0.7.1" }
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.204"
serde_yaml = "0.9"
serde_json = "1.0.120"
